<resources>
    <string name="app_name">SpellItForMe</string>
    <string name="action_settings">Settings</string>

    <!-- LoginFragment -->
    <string name="login_fragment_label">Login</string>
    <string name="tietLoginUsernameHint">Username or mail</string>
    <string name="tietLoginPasswordHint">Password</string>
    <string name="btLogin">Log In</string>
    <string name="tvRegisterNow"><u>Don\'t have an account? Register now</u></string>
    <string name="emptyFieldsWarning">One or more fields are empty, try again</string>
    <string name="failedLoginWarningTitle">Login Failure</string>
    <string name="failedLoginWarningMessage">User or password not valid, try it again</string>

    <!-- RegistrationFragment -->
    <string name="registration_fragment_label">Register New User</string>
    <string name="tvRegisterGuide"><b>Enter the following data:</b></string>
    <string name="tvRegisterEmailInUseWarning">That email is already in use</string>
    <string name="tietRegisterMailHint">Enter your email</string>
    <string name="tvRegisterUsernameInUseWarning">That username is already in use</string>
    <string name="tietRegisterUsernameHint">Enter a new username</string>
    <string name="tietRegisterPasswordHint">Enter your password</string>
    <string name="tietRegisterRepeatPasswordHint">Confirm your password</string>
    <string name="tvRegisterNonMatchingPasswordsWarning">The passwords do not match, check and try again</string>
    <string name="ckbRegisterAcceptTerms">I accept the terms of service</string>
    <string name="btRegisterRegister">Register</string>

    <!-- HomeFragment -->
    <string name="home_fragment_label">Greetings, %s</string>
    <string name="tvHomeUserSets">Your Sets</string>
    <string name="characterSetDeleteWarningDialogTitle">Character Removal</string>
    <string name="characterSetDeleteWarningDialogMessage">Are you sure about deleting the "%s" character? </string>
    <string name="characterSetDeleteWarningDialogConfirm">Delete</string>
    <string name="characterSetDeleteWarningDialogCancel">Cancel</string>
    <string name="signOffConfirmDialogTitle">Signing Off</string>
    <string name="signOffConfirmDialogMessage">Do you want to sign off your account and go back to the login screen?</string>
    <string name="signOffConfirmDialogueConfirm">Sign Off</string>
    <string name="signOffConfirmDialogueCancel">Cancel</string>

    <!-- ItemCharacterSet -->
    <string name="tvCharacterSetWeaponNone">No weapon</string>

    <!-- CharacterCreationFragment -->
    <string name="character_creation_fragment_label">New Character Creation</string>
    <string name="tietCharacterCreationNameHint">Character\s Name</string>
    <string name="tvCharacterCreationRoleInfo">Character Role</string>
    <string-array name="spCharacterCreationRole">
        <item>Warrior</item>
        <item>Rogue</item>
        <item>Mage</item>
    </string-array>
    <string name="tvCharacterCreationHealthAndSpiritumInfo">Basic Attributes</string>
    <string name="tietCharacterCreationHealthHint">Health Points</string>
    <string name="tietCharacterCreationSpiritumHint">Spiritum Points</string>
    <string name="tvCharacterCreationAttributesInfo">Advanced Attributes</string>
    <string name="tietCharacterCreationStrengthHint">Strength</string>
    <string name="tietCharacterCreationCunningHint">Cunning</string>
    <string name="tietCharacterCreationAttunementHint">Attunement</string>
    <string name="toastEmptyFieldsWarning">One or more attribute fields are empty</string>
    <string name="characterCreationExitWithoutSavingWarningDialogTitle">Leaving Without Proceeding</string>
    <string name="characterCreationExitWithoutSavingWarningDialogMessage">If you leave now, the character data you\'ve introduced will be lost. Are you sure?</string>
    <string name="characterCreationExitWithoutSavingWarningDialogConfirm">Leave</string>
    <string name="characterCreationExitWithoutSavingWarningDialogCancel">Cancel</string>

    <!-- EquipmentSetFragment -->
    <string name="equipment_set_fragment_label">Editing Equipment</string>
    <string name="tvEquipmentEquipmentAttributesTitle">Attributes</string>
    <string name="tvEquipmentOffensiveStatsTitle">Attacking Stats</string>
    <string name="tvEquipmentDefensiveStatsTitle">Defenses</string>
    <string name="tvWeaponInfo">Weapon</string>
    <string name="tvGearInfo">Gear</string>
    <string name="tvAccessoriesInfo">Accessories</string>
    <string name="tvEquipmentSlots">Slots</string>
    <string name="tvActualSkills">Skills</string>
    <string name="skillInfoCloseAction">Close</string>
    <string name="equipmentSetSaveAndExitDialogTitle">Saving Current Set</string>
    <string name="equipmentSetSaveAndExitDialogMessage">Do you want to save the current set and go back to the Home screen?</string>
    <string name="equipmentSetSaveAndExitDialogConfirm">Save &amp; Exit</string>
    <string name="equipmentSetSaveAndExitDialogCancel">Cancel</string>
    <string name="equipmentSetExitWithoutSavingWarningDialogTitle">Leaving Without Saving</string>
    <string name="equipmentSetExitWithoutSavingWarningDialogMessage">If you leave now, changes won\'t be saved. Are you sure?</string>
    <string name="equipmentSetExitWithoutSavingWarningDialogConfirm">Leave</string>
    <string name="equipmentSetExitWithoutSavingWarningDialogCancel">Cancel</string>

    <!-- ItemGearOnSet -->
    <string name="tvGearOnSetNameDefault">No %s selected</string>

    <!-- ItemSlotOnSet -->
    <string name="tvSlotOnSetNoSkill">No skill selected</string>
    <string name="tvSlotOnSetArrow"> --> </string>

    <!-- WeaponSearchFragment -->
    <string name="weapon_search_fragment_label">Searching Weapons</string>
    <string name="svWeaponNameFilterHint">Filter by a weapon\'s name…</string>
    <string name="tvWeaponSearchInfoType">Type</string>
    <string-array name="spSearchTypeFilter">
        <item>All</item>
        <item>Sword</item>
        <item>Spear</item>
    </string-array>
    <string name="tvWeaponSearchInfoRarity">Rarity</string>
    <string-array name="spGearSearchRarityFilter">
        <item>All</item>
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Mythical</item>
        <item>Legendary</item>
    </string-array>

    <!-- GearSearchFragment -->
    <string name="gear_search_fragment_label">Searching Gear</string>
    <string name="svGearNameFilterHint">Filter by a piece\'s name…</string>
    <string name="tvGearSearchRarityFilterInfo">Rarity</string>

    <!-- AccessorySearchFragment -->
    <string name="accessory_search_fragment_label">Searching Accessories</string>
    <string name="svAccessoryNameFilterHint">Filter by an accessory\'s name…</string>
    <string name="tvAccessorySearchTypeFilterInfo">Type</string>
    <string name="tvAccessorySearchRarityFilterInfo">Rarity</string>
    <string name="accessoryDeleteWarningDialogTitle">Accessory Removal</string>
    <string name="accessoryDeleteWarningDialogMessage">Are you sure about deleting the "%s" accessory?</string>
    <string name="accessoryDeleteWarningDialogConfirm">Delete</string>
    <string name="accessoryDeleteWarningDialogCancel">Cancel</string>


    <!-- SkillSearchFragment -->
    <string name="skill_search_fragment_label">Searching Skills</string>
    <string name="svSkillSearchNameFilterHint">Filter by a skill\'s name…</string>
    <string name="tvSkillSearchTypeFilterInfo">Type</string>
    <string-array name="spSkillSearchTypeFilter">
        <item>All</item>
        <item>Attack</item>
        <item>Critical</item>
        <item>Defense</item>
        <item>Resistance</item>
        <item>Harvest</item>
        <item>Crafting</item>
    </string-array>

    <!-- AccessoryCreationFragment -->
    <string name="accessory_creation_fragment_label">New Accesory Creation</string>
    <string name="tietAccessoryCreationNameHint">Accessory\'s Name</string>
    <string name="tvAccessoryCreationTypeInfo">Type</string>
    <string-array name="spAccessoryCreationType">
        <item>Necklace</item>
        <item>Ring</item>
    </string-array>
    <string name="tvAccessoryCreationRarityInfo">Rarity</string>
    <string-array name="spAccessoryCreationRarity">
        <item>Common</item>
        <item>Uncommon</item>
        <item>Rare</item>
        <item>Mythical</item>
        <item>Legendary</item>
    </string-array>
    <string name="tvAccessoryCreationDefenseInfo">Defenses</string>
    <string name="tietAccessoryCreationPhysDefenseHint">Physical Defense</string>
    <string name="tietAccessoryCreationFireDefenseHint">Fire Defense</string>
    <string name="tietAccessoryCreationIceDefenseHint">Ice Defense</string>
    <string name="tietAccessoryCreationThunderDefenseHint">Thunder Defense</string>
    <string name="tvAccessoryCreationSlotsInfo">Slots</string>
    <string name="tvAccessoryCreationSlotsInfoNumber">Number of slots</string>
    <string-array name="spAccessoryCreationNumberOfSlots">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="tvAccessoryCreationSkillInfo">Skills</string>
    <string name="tvAccessoryCreationSkillInfoNumber">Number of skills</string>
    <string-array name="spAccessoryCreationNumberOfSkills">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="tvAccessoryCreationSkillInfoFirst">First Skill</string>
    <string name="tvAccessoryCreationSkillInfoSecond">Second Skill</string>
    <string-array name="spAccessoryCreationSkills">
        <item>Atk Up</item>
        <item>Peak Form</item>
        <item>Fire Atk Up</item>
        <item>Ice Atk Up</item>
        <item>Thunder Atk Up</item>
        <item>Critical Up</item>
        <item>Phys Def Up</item>
        <item>Fire Def Up</item>
        <item>Ice Def Up</item>
        <item>Thunder Def Up</item>
        <item>Stun Resistance</item>
        <item>Geologist\'s Touch</item>
        <item>Herbalist\'s Wit</item>
    </string-array>
    <string name="accessoryCreationExitWithoutSavingWarningDialogTitle">Leaving Without Saving</string>
    <string name="accessoryCreationExitWithoutSavingWarningDialogMessage">If you leave now, the accessory data you\'ve introduced won\'t be saved. Are you sure?</string>
    <string name="accessoryCreationExitWithoutSavingWarningDialogConfirm">Leave</string>
    <string name="accessoryCreationExitWithoutSavingWarningDialogCancel">Cancel</string>
</resources>