<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytLoginUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietLoginUsernameHint"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tilytLoginUsername"
        app:layout_constraintStart_toStartOf="@+id/tilytLoginUsername"
        app:layout_constraintTop_toBottomOf="@+id/tilytLoginUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietLoginPasswordHint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btLoginLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btLogin"
        app:layout_constraintEnd_toEndOf="@+id/tilytLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/tilytLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilytLoginPassword" />

    <TextView
        android:id="@+id/tvLoginRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/tvRegisterNow"
        android:textColor="@color/linkRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLoginLog" />

</androidx.constraintlayout.widget.ConstraintLayout>