<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccessoryCreationFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytAccessoryCreationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAccessoryCreationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietAccessoryCreationNameHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAccessoryCreationTypeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationTypeInfo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilytAccessoryCreationName" />

    <TextView
        android:id="@+id/tvAccessoryCreationRarityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationRarityInfo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationTypeInfo" />

    <Spinner
        android:id="@+id/spAccessoryCreationType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAccessoryCreationTypeInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAccessoryCreationTypeInfo"
        app:layout_constraintTop_toTopOf="@+id/tvAccessoryCreationTypeInfo" />

    <Spinner
        android:id="@+id/spAccessoryCreationRarity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAccessoryCreationRarityInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spAccessoryCreationType"
        app:layout_constraintTop_toTopOf="@+id/tvAccessoryCreationRarityInfo" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationRarityInfo"
        tools:layout_editor_absoluteX="-23dp" />

    <TextView
        android:id="@+id/tvAccessoryCreationDefenseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationDefenseInfo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytAccessoryCreationPhysDefense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/tilytAccessoryCreationFireDefense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationDefenseInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAccessoryCreationPhysDefense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietAccessoryCreationPhysDefenseHint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytAccessoryCreationFireDefense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilytAccessoryCreationPhysDefense"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationDefenseInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAccessoryCreationFireDefense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietAccessoryCreationFireDefenseHint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytAccessoryCreationIceDefense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/tilytAccessoryCreationThunderDefense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilytAccessoryCreationPhysDefense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAccessoryCreationIceDefense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietAccessoryCreationIceDefenseHint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilytAccessoryCreationThunderDefense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilytAccessoryCreationIceDefense"
        app:layout_constraintTop_toBottomOf="@+id/tilytAccessoryCreationFireDefense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAccessoryCreationThunderDefense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tietAccessoryCreationThunderDefenseHint"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/tilytAccessoryCreationIceDefense"
        tools:layout_editor_absoluteX="-23dp" />

    <TextView
        android:id="@+id/tvAccessoryCreationSlotsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationSlotsInfo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/tvAccessoryCreationSlotsInfoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationSlotsInfoNumber"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationSlotsInfo" />

    <Spinner
        android:id="@+id/spAccessoryCreationNumberOfSlots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAccessoryCreationSlotsInfoNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAccessoryCreationSlotsInfoNumber"
        app:layout_constraintTop_toTopOf="@+id/tvAccessoryCreationSlotsInfoNumber" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/spAccessoryCreationNumberOfSlots"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/tvAccessoryCreationSkillInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationSkillInfo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <TextView
        android:id="@+id/tvAccessoryCreationSkillInfoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/tvAccessoryCreationSkillInfoNumber"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationSkillInfo" />

    <Spinner
        android:id="@+id/spAccessoryCreationNumberOfSkills"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAccessoryCreationSkillInfoNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAccessoryCreationSkillInfoNumber"
        app:layout_constraintTop_toTopOf="@+id/tvAccessoryCreationSkillInfoNumber" />

    <TextView
        android:id="@+id/tvAccessoryCreationSkillInfoFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:text="@string/tvAccessoryCreationSkillInfoFirst"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvAccessoryCreationSkillInfoSecond"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spAccessoryCreationNumberOfSkills" />

    <TextView
        android:id="@+id/tvAccessoryCreationSkillInfoSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvAccessoryCreationSkillInfoSecond"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAccessoryCreationSkillInfoFirst"
        app:layout_constraintTop_toBottomOf="@+id/spAccessoryCreationNumberOfSkills" />

    <Spinner
        android:id="@+id/spAccessoryCreationFirstSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvAccessoryCreationSkillInfoFirst"
        app:layout_constraintStart_toStartOf="@+id/tvAccessoryCreationSkillInfoFirst"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationSkillInfoFirst" />

    <Spinner
        android:id="@+id/spAccessoryCreationSecondSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tvAccessoryCreationSkillInfoSecond"
        app:layout_constraintStart_toStartOf="@+id/tvAccessoryCreationSkillInfoSecond"
        app:layout_constraintTop_toBottomOf="@+id/tvAccessoryCreationSkillInfoSecond" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAccessoryCreationSaveAndExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>